plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ccksy'
version = '0.0.1-SNAPSHOT'
description = 'LoanWisely'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Web / Validation
	//implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Security / Actuator
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// JWT (Admin auth)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// DB / Migration
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'

	// Jackson (Java 8+ Date/Time 지원 - 명시 추가)
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// Oracle JDBC
	runtimeOnly 'com.oracle.database.jdbc:ojdbc11:23.5.0.24.07'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test (최소 구성)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.0.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	implementation 'org.flywaydb:flyway-database-oracle'	

	// Elasticsearch (7.10.1)
	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.10.1'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

tasks.withType(ProcessResources).configureEach {
	duplicatesStrategy = DuplicatesStrategy.INCLUDE
}
